--- a/Finals LAB ACTIVITY 1/node-rest-api/package.json
+++ b/Finals LAB ACTIVITY 1/node-rest-api/package.json
@@ -1,7 +1,6 @@
 {
   "name": "rest-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,12 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^2.0.0-beta.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^5.0.0-beta.2",
-    "mongoose": "^8.2.2"
+    "express": "^4.19.1",
+    "mongoose": "^8.2.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
-  }
+  },
+  "description": ""
 }
